--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/file-publish-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/file-publish-dialog.html
@@ -65,7 +65,7 @@
 			</table>
 			<div class="modal-footer-buttons text-center">
 				<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
-				<button class="btn btn-icn btn-circular btn-success pull-right" ng-click="selectAccount()"><i class="zmdi zmdi-chevron-right"></i></button>
+				<button class="btn btn-icn btn-circular btn-success pull-right" ng-click="selectAccount()"><i class="zmdi zmdi-arrow-right"></i></button>
 			</div>
 		</div>
 		<div ng-switch-when="upload-select-account">
