--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -8,7 +8,7 @@
 				<a class="btn btn-header" href="#/files"><i class="zmdi zmdi-chevron-left"></i></a>
 			</div>
 			<div class="col">
-				<div class="icn" style="width: 32px; height: 32px; margin-top: 10px; margin-left: 5px;">
+				<div class="icn" style="width: 32px; height: 32px; margin-left: 5px;">
 					<img ng-src="{{agent.iconUrl}}" width="32" height="32" />
 				</div>
 			</div>
