--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/account-add-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/account-add-dialog.html
@@ -21,6 +21,10 @@
 				</a>
 			</li>
 		</ul>
+
+		<div class="modal-footer-buttons text-center">
+			<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+		</div>
 	</div>
 
 	<div ng-switch-when="http://eprints.org">
@@ -36,8 +40,13 @@
 				<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="parameter.password" ui-keypress="{13:'connectAccount(selectedClient)'}" required>
 			</div>
 
-			<button type="submit" class="btn btn-default" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < clientState && clientState < 3)">Connect</button>
+
 		</form>
+
+		<div class="modal-footer-buttons text-center">
+			<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+			<button class="btn btn-icn btn-circular btn-success pull-right" type="submit" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < clientState && clientState < 3)"><i class="zmdi zmdi-check"></i></button>
+		</div>
 	</div>
 
 	<div ng-switch-when="http://orcid.org">
@@ -45,10 +54,10 @@
 
 		<iframe ng-src="{{clientUrl}}" style="min-height: 400px; width: 100%;">
 		</iframe>
-	</div>
 
-	<div class="modal-footer-buttons text-center">
-		<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+		<div class="modal-footer-buttons text-center">
+			<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+		</div>
 	</div>
 
 	<div ng-switch="clientState" class="modal-status-bar">
