--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/file-publish-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/file-publish-dialog.html
@@ -14,8 +14,9 @@
 				<tr>
 					<td valign="top">
 						<div class="card no-margin">
-							<div class="img-thumbnail"></div>
-							<div class="title">{{file.label}}</div>
+							<div class="file-thumbnail" style="background-image: url({{getFileThumbnailUrl(entity.uri)}});"></div>
+							<div class="file-name">{{getFileNameWithoutExtension(file.label)}}</div>
+							<div class="file-extension" style="background-color: {{file.agentColor}};">{{getFileExtension(file.label)}}</div>
 						</div>
 						<div class="clearfix"></div>
 						<div style="margin-top: 20px; line-height: 32px; vertical-align: middle;">
@@ -101,7 +102,7 @@
 		</div>
 		<div ng-switch-when="no-accounts">
 			<label>Go to <a href="#/settings">Preferences</a> <i class="zmdi zmdi-arrow-right"></i> Accounts to add one.</label>
-			
+
 			<div class="modal-footer-buttons text-center">
 				<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
 			</div>
