--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -1007,10 +1007,10 @@ svg {
 	position: relative;
 	float: left;
 	width: 201px;
-	height: 201px;
+	height: 240px;
 	margin: 0 5px 5px 0;
-	padding: 0;
-	background: #262626;
+	padding: 0 5px;
+	border-radius: 5px;
 }
 
 .card a {
@@ -1027,6 +1027,7 @@ svg {
 	height: 100;
 	background: transparent;
 	transition: all ease-in .1s;
+	border-radius: 5px;
 }
 
 .card a:hover {
@@ -1036,15 +1037,17 @@ svg {
 .card .file-thumbnail-container {
 	position: relative;
 	border: none;
-	border-radius: 0;
+	border-radius: 5px;
 	box-shadow: none;
 	width: 100%;
-	height: 100%;
-	background: transparent url('../img/placeholder-img.png') center center no-repeat;
+	height: 201px;
+	background: #262626 url('../img/placeholder-img.png') center center no-repeat;
 	background-size: 125px auto;
+	margin-top: 5px;
 }
 
 .card .file-thumbnail {
+	border-radius: 5px;
 	width: 100%;
 	height: 100%;
 	background: transparent no-repeat;
@@ -1057,14 +1060,14 @@ svg {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: linear-gradient(rgba($windowBackgroundColor, .1), transparent, transparent, rgba($windowBackgroundColor, .3));	
+	background: linear-gradient(rgba($windowBackgroundColor, .1), transparent, transparent, rgba($windowBackgroundColor, .3));
 }
 
 .card .file-name {
 	position: absolute;
 	bottom: 0;
-	left: 0;
-	right: 0;
+	left: 5px;
+	right: 5px;
 	padding: 5px 5px 5px 5px;
 	text-shadow: 0 1px 3px rgba($windowBackgroundColor, .75);
 }
@@ -1072,8 +1075,8 @@ svg {
 .card .file-extension {
 	z-index: 100;
 	position: absolute;
-	top: 0;
-	right: 5px;
+	top: 5px;
+	right: 10px;
 	font-size: 11px;
 	text-transform: uppercase;
 	padding: 2px;
