--- a/Artivity.Apid.Modules.Journal/app/partials/file-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-list.html
@@ -2,14 +2,19 @@
 	<div id="header">
 		<div class="row">
 			<div class="col">
+				<img style="opacity: .75; width: auto; height: 30px; margin: 5px 10px;" ng-src="img/artivity-logo.png" />
+			</div>
+			<div class="col expand" style="padding: 0;">
+				<label class="title pull-right" style="margin: 0; padding: 0; position: relative; top: 7px;">{{user.Name}}</label>
+			</div>
+			<div class="col">
 				<img class="icn icn-circle" style="margin-left: 5px;" ng-src="{{userPhotoUrl}}" />
 			</div>
-			<div class="col expand">
-				<h5 class="title">{{user.Name}}</h5>
-			</div>
+			<!--
 			<div class="col">
 				<a id="calendar-btn" class="btn btn-header" ng-click="toggleCalendar()"><i class="zmdi zmdi-hc-fw zmdi-calendar"></i></a>
 			</div>
+			-->
 			<div class="col">
 				<a class="btn btn-default btn-header" href="#/settings"><i class="zmdi zmdi-hc-fw"></i></a>
 			</div>
