--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -1084,6 +1084,7 @@ svg {
 	text-align: center;
 	border-radius: 0 5px 0 5px;
 	box-shadow: 0 1px 3px rgba(0,0,0,.25);
+	color: $windowBackgroundColor;
 }
 
 
