Bugfix: Enabled scrollbar in dashboard.

--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -25,7 +25,7 @@
 	</div>
 
 	<div id="body-wrapper" class="bottom-toolbar">
-		<div id="body">
+		<div id="body" class="table">
 			<div class="ui-resizable ui-pane ui-pane-left">
 				<div class="pane-content padded">
 					<!-- Note: The tabindex is required for the div to be focusable. -->
@@ -230,7 +230,7 @@
 		</div>
 	</div>
 
-	<script>
+	<script type="text/javascript">
 		$(function () {
 			$(document).ready(function () {
 				updateCanvas();
