--- a/Artivity.Apid.Modules.Journal/app/partials/file-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-list.html
@@ -2,7 +2,7 @@
 	<div id="header">
 		<div class="row">
 			<div class="col">
-				<img style="opacity: .5; width: auto; height: 30px; margin: 5px 10px;" ng-src="img/artivity-logo.png" />
+				<img style="opacity: .5; width: auto; height: 25px; margin: 5px 10px;" ng-src="img/artivity-logo.png" />
 			</div>
 			<div class="col expand" style="padding: 0;">
 				<label class="title pull-right" style="margin: 0; padding: 0; position: relative; top: 7px;">{{user.Name}}</label>
@@ -22,9 +22,9 @@
 	</div>
 
 	<div id="body-wrapper">
-		<div id="body">
+		<div id="body" class="scroll-vertical">
 			<div ng-switch on="files.length > 0">
-				<div class="pull-left" ng-switch-when="true">
+				<div ng-switch-when="true">
 					<ul id="file-list" class="cards">
 						<li class="card" ng-repeat="file in files">
 							<div class="file-thumbnail-container">
