--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -551,7 +551,7 @@ h4 {
 
 #header a.btn:hover,
 #footer a.btn:hover {
-	background: rgba(255, 255, 255, .2);
+	background: rgba(255, 255, 255, .1);
 	color: rgba($textColor, 1);
 }
 
@@ -609,10 +609,6 @@ h4 {
 	position: absolute;
     width: 100%;
     height: 100%;
-}
-
-.table {
-    display: table;
 }
 
 #canvas {
@@ -700,6 +696,10 @@ h4 {
 	top: -5px;
 }
 
+.ui-pane-container {
+    display: table;
+}
+
 .ui-pane {
 	background: $windowBackgroundColor;
 	display: table-cell;
@@ -711,12 +711,12 @@ h4 {
 
 .ui-pane.ui-pane-left {
 	width: 370px;
-	border-right: 1px solid rgba($accentColor, .025);
+	border-right: 1px solid rgba(255,255,255,.025);
 }
 
 .ui-pane.ui-pane-right {
 	width: 300px;
-	border-left: 1px solid rgba($accentColor, .025);
+	border-left: 1px solid rgba(255,255,255,.025);
 }
 
 .ui-pane .tab-content {
@@ -1390,6 +1390,11 @@ button[disabled]:hover {
 
 ::-webkit-scrollbar-thumb {
 	background: $headerBackgroundColor;
+    border: 2px solid $windowBackgroundColor;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: lighten($headerBackgroundColor, 10%);
 }
 
 .bootstrap-switch {
