--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -25,7 +25,7 @@
 	</div>
 
 	<div id="body-wrapper" class="bottom-toolbar">
-		<div id="body" class="table">
+		<div id="body" class="ui-pane-container">
 			<div class="ui-resizable ui-pane ui-pane-left">
 				<div class="pane-content padded">
 					<!-- Note: The tabindex is required for the div to be focusable. -->
