--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -13,7 +13,7 @@
 		</div>
 	</div>
 	<div id="body-wrapper">
-		<div id="body">
+		<div id="body" class="ui-pane-container">
 			<div class="ui-pane ui-pane-left" style="width: 225px; border-right: none; background: #262626;">
 				<ul class="nav nav-tabs nav-stacked" role="tablist" id="tabs">
 					<li role="presentation" class="active"><a data-target="#user-panel" role="tab" data-toggle="tab"><span class="icn-container-lg"><i class="zmdi zmdi-account zmdi-lg"></i></span> {{ 'SETTINGS.PROFILE.LABEL' | translate }}</a></li>
