Made JavaScript renderer more robust. It can now handle influences which are not in strict sequential with their activities.

--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -79,7 +79,7 @@
 								</div>
 
 								<ul class="lst-influences list-unstyled">
-									<li ng-repeat="influence in activity.influences" ng-class="{selected: influence == selectedInfluence}">
+									<li ng-repeat="influence in activity.influences track by $index" ng-class="{selected: influence == selectedInfluence}">
 										<div ng-switch="influence.type">
 											<div ng-switch-when="http://w3id.org/art/terms/1.0/Comment">
 												<a class="comment" ng-click="previewInfluence(influence)">
