Added disabled class for input elements to CSS. Removed btn-default from preferences button in Dashboard.

--- a/Artivity.Apid.Modules.Journal/app/partials/file-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-list.html
@@ -16,7 +16,7 @@
 			</div>
 			-->
 			<div class="col">
-				<a class="btn btn-default btn-header" href="#/settings"><i class="zmdi zmdi-hc-fw"></i></a>
+				<a class="btn btn-header" href="#/settings"><i class="zmdi zmdi-hc-fw"></i></a>
 			</div>
 		</div>
 	</div>
