--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -66,6 +66,10 @@
 											<label for="email">{{'SETTINGS.PROFILE.LABEL_EMAIL' | translate}}</label>
 											<input type="text" class="form-control" id="email" name="email" placeholder="you@example.org" length="25" ng-model="user.EmailAddress" ng-minlength="5" required>
 										</div>
+										
+										<div class="form-group" style="margin-top: 3em;">
+											<a class="btn btn-chromeless" ng-click="createBackup()"><i class="zmdi zmdi-account-box-o"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_CREATE' | translate}}</a>
+										</div>
 									</div>
 								</div>
 							</div>
