--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -1397,6 +1397,20 @@ button[disabled]:hover {
 	animation: load8 1.1s infinite linear;
 }
 
+.loader.loader-xs {
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	border-top: 2px solid rgba($textColor, 0.2);
+	border-right: 2px solid rgba($textColor, 0.2);
+	border-bottom: 2px solid rgba($textColor, 0.2);
+	border-left: 2px solid $textColor;
+	padding: 0;
+	margin: 3px;
+	line-height: 16px;
+	vertical-align: middle;
+}
+
 .loader,
 .loader:after {
 	border-radius: 50%;
@@ -2131,28 +2145,6 @@ path.color1 {
 	transform-origin: 0px 5.1em;
 	-webkit-animation: load2 2s infinite ease;
 	animation: load2 2s infinite ease;
-}
-
-@-webkit-keyframes load2 {
-	0% {
-		-webkit-transform: rotate(0deg);
-		transform: rotate(0deg);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
-}
-
-@keyframes load2 {
-	0% {
-		-webkit-transform: rotate(0deg);
-		transform: rotate(0deg);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
 }
 
 .cfp-hotkeys-close {
